# energostat

./: .drone.yml  .editorconfig  .gitignore  Dockerfile  Jenkinsfile.groovy  LICENSE  README.md  pyproject.toml  requirements.txt  tasks.py
.ci/: Dockerfile  api-gateway.yml  docker-compose.yml  drone.yml  hosts.ini  playbook.yml  registry-lifecycle-policy.json
ansible/: config.example.yml  config.yml  docker-compose.yml  playbook.yml
src/: main.py
src/energostat/: __init__.py  app.py  input.py  main.py  model.py  output.py  utils.py
src/energostat/static/: index.html  settings.ini
src/energostat/tests/: test_app.input.html  test_app.py  test_utils.py
src/energostat/tests/test_app.output/: 80020_001_1234567890_01122018.xml  80020_001_1234567890_02122018.xml  80020_001_1234567890_03122018.xml  80020_001_1234567890_04122018.xml  80020_001_1234567890_05122018.xml  80020_001_1234567890_06122018.xml  80020_001_1234567890_07122018.xml  80020_001_1234567890_08122018.xml  80020_001_1234567890_09122018.xml  80020_001_1234567890_10122018.xml  80020_001_1234567890_11122018.xml  80020_001_1234567890_12122018.xml  80020_001_1234567890_13122018.xml  80020_001_1234567890_14122018.xml  80020_001_1234567890_15122018.xml  80020_001_1234567890_16122018.xml  80020_001_1234567890_17122018.xml  80020_001_1234567890_18122018.xml  80020_001_1234567890_19122018.xml  80020_001_1234567890_20122018.xml  80020_001_1234567890_21122018.xml  80020_001_1234567890_22122018.xml  80020_001_1234567890_23122018.xml  80020_001_1234567890_24122018.xml  (+7 more)
src/static/: index.html
