[tool.poetry]
name = "energostat"
version = "0.1.0"
description = ""
authors = ["B7W <b7w@isudo.ru>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1"
flask = "^2.3"
lxml = "^4.9"
parsel = "^1.8"
python-dateutil = "^2.8"
toml = "^0.10"
pytz = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^7"


[tool.poetry.scripts]
energostat = 'energostat.main:main'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
